--- a/sentry/Dockerfile
+++ b/sentry/Dockerfile
@@ -1,3 +1,3 @@
 FROM sentry:8
 
-CMD '/bin/bash -c sentry upgrade --no-input && /entrypoint.sh run web || /entrypoint.sh run web'
+CMD '/bin/bash -c sentry upgrade --no-input && sentry run web'
