Configures Sentry default user and migrations on bootstrap

--- a/sentry/Dockerfile
+++ b/sentry/Dockerfile
@@ -1,3 +1,5 @@
 FROM sentry:latest
 
-CMD [ "/bin/bash -c sentry upgrade --no-input && sentry createuser --email $SENTRY_INITIAL_USER_EMAIL --password $SENTRY_INITIAL_USER_PASSWORD --superuser && /entrypoint.sh run web || /entrypoint.sh run web" ]
+ENTRYPOINT ["/bin/bash","-c"]
+
+CMD [ "sentry upgrade --noinput && sentry createuser --email $SENTRY_INITIAL_USER_EMAIL --password $SENTRY_INITIAL_USER_PASSWORD --superuser && /entrypoint.sh run web || /entrypoint.sh run web" ]
