Updates sentry example to follow new volume/command patterns and configure it based on community specs

--- a/sentry/Dockerfile
+++ b/sentry/Dockerfile
@@ -1,4 +1,8 @@
-FROM sentry:8
+FROM sentry:8.22.0
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        curl \
+&& rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/bin/bash","-c"]
 
